base/k8s-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: k8s-dashboard
  name: k8s-dashboard
  namespace: streamlit-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-dashboard
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: k8s-dashboard
    spec:
      serviceAccountName: k8s-dashboard-sa
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - image: ghcr.io/fy2sysnotify/streamlit-app:main-99ba898a
        name: k8s-dashboard
        ports:
          - containerPort: 8501
