base/k8s-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard
  namespace: streamlit-monitoring
spec:
  selector:
    app: k8s-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: ClusterIP
