base/k8s-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard
  namespace: streamlit-monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-streamlit-dash.192.168.49.2.nip.io # Replace with your desired domain. This is a test domain that automatically resolves to Minikube IP (usually 192.168.49.2) using nip.io - a free wildcard DNS service. This is set up for local testing with minikube.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-dashboard
                port:
                  number: 80
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
